<resources>
    <string name="app_name">TicTacToeGame</string>
    <string name="new_game">New Game</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="clear_grid_first">Clear Grid First</string>
    <string name="start_game">Start Game</string>
    <string name="start_refresh_game">Start/Refresh Game</string>
    <string name="exit">Exit</string>
    <string name="exit_game">Exit Game</string>
    <string name="please_click_the_start_game_button_to_begin_have_fun">Please Click the Start Game Button to Begin. Have Fun!</string>
</resources>