<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--This layout is for the large square that holds all nine buttons.-->

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="351dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721">


        <!--Each of these nested layouts are for each row of buttons. -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="30sp"
                tools:ignore="NestedWeights,OnClick" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textSize="30sp"
                tools:ignore="OnClick" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textSize="30sp"
                tools:ignore="OnClick" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="30sp"
                tools:ignore="NestedWeights,OnClick" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="30sp"
                tools:ignore="OnClick" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="30sp"
                tools:ignore="OnClick" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="30sp"
                tools:ignore="NestedWeights,OnClick" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="30sp"
                tools:ignore="OnClick" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="30sp"
                tools:ignore="OnClick" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/ExitGame"
        android:layout_width="143dp"
        android:layout_height="68dp"
        android:text="@string/exit_game"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <Button
        android:id="@+id/NewGame"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:text="@string/start_refresh_game"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/Rules"
        android:layout_width="283dp"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="@string/please_click_the_start_game_button_to_begin_have_fun"
        android:textColor="#FF1493"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />


</androidx.constraintlayout.widget.ConstraintLayout>